Jaeksoft Open Search Server
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

Open Search Server 1.2

New features:
- 3175585: More like this feature
- 3169421: Japanese and Korean support
- 3159477: Identify identical web pages
- 3151757: Upgrade to PDFBox 1.4.x
- 3141193: FTP/FTPS support in the file crawler
- 3141192: SMB/CIFS support in file crawler
- 3034238: Crawler able to log in protected web site
- 3011773: Add Quartz as scheduler service
- 3138603: Upgrade Tomcat to version 6.0.29
- 3103055: Convert HTML entities
- 3087916: Upgrade to PDFBox 1.2
- 3043692: Torrent Parser
- 3042488: Audio parser
- 2882260: Add a parser for text/plain
- 3010010: RTF parser
- 3038733: Add a shingle filter
- 3036262: Log management
- 3031800: Schema interface
- 3031204: Adding NGram support
- 3008440: Index replication
- 3026212: API and interface for document deletion
- 3023327: Sub domain extraction in Web Crawler
- 2820289: Database crawler
- 3019035: Neglight dynamic url while crawling 
- 3017277: Allow wildcard query in the URL browser
- 3016491: Url Exporter
- 3016566: Monitoring API
- 3015939: Cluster collapsing
- 2830490: Size of the index
- 3011847: Score explanation
- 3008633: Possibility to turn off the highlighting
- 2997836: In the returned fields having extra fields from Meta tags
- 2997826: Possibility to index only the specified content
- 2991252: Possibility to index binary file and to add it to a document
- 2982545: Extracting term frequency informations
- 2881385: API to retrieve the available indice
- 2887376: Enhancement for the index page - dropping indexes
- 2881388: API to list/create/modify fields in a specified schema
- 2973374: Upgrade to ZKoss 5.0.x	
- 2970747: Upgrade Tomcat to version 6.0.26
- 2966139: Statistics lost when OSS restart
- 2964704: Upgrade to Lucene 2.9.x
- 2958015: Add source archive